--- a/BlazorAdmin/BlazorAdmin/Components/Layout/MainLayout.razor
+++ b/BlazorAdmin/BlazorAdmin/Components/Layout/MainLayout.razor
@@ -1,5 +1,6 @@
-﻿@inherits LayoutComponentBase
-
+﻿@using Radzen.Blazor
+@inherits LayoutComponentBase
+<RadzenComponents />
 <div class="page">
     <div class="sidebar">
         <NavMenu />
