--- a/BlazorAdmin/BlazorAdmin/Components/Layout/MainLayout.razor
+++ b/BlazorAdmin/BlazorAdmin/Components/Layout/MainLayout.razor
@@ -1,6 +1,5 @@
 ﻿@using Radzen.Blazor
 @inherits LayoutComponentBase
-<RadzenComponents />
 <div class="page">
     <div class="sidebar">
         <NavMenu />
@@ -15,6 +14,8 @@
             @Body
         </article>
     </main>
+    <RadzenComponents />
+
 </div>
 
 <div id="blazor-error-ui">
@@ -22,3 +23,8 @@
     <a href="" class="reload">Reload</a>
     <a class="dismiss">🗙</a>
 </div>
+<RadzenDialog @rendermode="@RenderMode.InteractiveServer" />
+
+<RadzenContextMenu />
+<RadzenNotification />
+<RadzenTooltip />
