--- a/BlazorAdmin/BlazorAdmin/Components/Calendars/AddEvent.razor
+++ b/BlazorAdmin/BlazorAdmin/Components/Calendars/AddEvent.razor
@@ -31,7 +31,7 @@
 </RadzenTemplateForm>
 @code {
     [Parameter]
-    public DateTimeOffset Date { get; set; }
+    public DateTime Date { get; set; }
 
     [Parameter]
     public string Description { get; set; }
