--- a/BlazorAdmin/BlazorAdmin/Components/Layout/MainLayout.razor
+++ b/BlazorAdmin/BlazorAdmin/Components/Layout/MainLayout.razor
@@ -23,7 +23,7 @@
     <a href="" class="reload">Reload</a>
     <a class="dismiss">🗙</a>
 </div>
-<RadzenDialog @rendermode="@RenderMode.InteractiveServer" />
+<RadzenDialog @rendermode="new InteractiveServerRenderMode(prerender:false)" />
 
 <RadzenContextMenu />
 <RadzenNotification />
