--- a/BlazorAdmin/BlazorAdmin/wwwroot/app.css
+++ b/BlazorAdmin/BlazorAdmin/wwwroot/app.css
@@ -49,3 +49,8 @@ h1:focus {
 .darker-border-checkbox.form-check-input {
     border-color: #929292;
 }
+
+
+.calendar-core-holiday-slot .rz-slot-title {
+    background-color: red !important;
+}
